fix z-index

--- a/src/views/svg-components/LineBackground/LineBackground.module.scss
+++ b/src/views/svg-components/LineBackground/LineBackground.module.scss
@@ -6,6 +6,7 @@
   right: 40px;
   top: 300px;
   pointer-events: none;
+  z-index: 1;
   svg {
     position: relative;
     left: 50%;
